feat: filtro de apenasAbertas na listagem de ulitizações
